// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DCircle checkFunction findPolygonInsideOnSphere 1 1`] = `"POLYGON ((1 10.000017966305682, 1.0000017881723582 10.000017879793004, 1.0000035591236365 10.000017621088137, 1.0000052957986028 10.000017192682547, 1.0000069814721257 10.000016598702022, 1.000008599910245 10.000015844866912, 1.0000101355265156 10.000014938437067, 1.0000115735321118 10.0000138881419, 1.0000129000782525 10.000012704096331, 1.0000141023895734 10.000011397703368, 1.0000151688871595 10.000009981544288, 1.0000160893000565 10.000008469257484, 1.0000168547641866 10.0000068754071, 1.0000174579077135 10.000005215342792, 1.0000178929220376 10.000003505051883, 1.0000181556177357 10.00000176100541, 1.0000182434649072 9.999999999999503, 1.0000181556175387 9.999998238993602, 1.0000178929216514 9.99999649494716, 1.000017457907153 9.999994784656296, 1.0000168547634734 9.999993124592049, 1.0000160892992176 9.99999153074174, 1.0000151688862275 9.999990018455023, 1.0000141023885842 9.999988602296035, 1.0000129000772437 9.99998729590317, 1.0000115735311224 9.9999861118577, 1.0000101355255837 9.999985061562624, 1.0000085999094064 9.999984155132864, 1.0000069814714123 9.999983401297833, 1.0000052957980423 9.999982807317366, 1.0000035591232503 9.999982378911824, 1.0000017881721615 9.999982120206985, 1 9.999982033694316, 0.9999982118278385 9.999982120206985, 0.9999964408767497 9.999982378911824, 0.9999947042019576 9.999982807317366, 0.9999930185285877 9.999983401297833, 0.9999914000905937 9.999984155132864, 0.9999898644744164 9.999985061562624, 0.9999884264688776 9.9999861118577, 0.9999870999227561 9.99998729590317, 0.9999858976114159 9.999988602296035, 0.9999848311137725 9.999990018455023, 0.9999839107007823 9.99999153074174, 0.9999831452365268 9.999993124592049, 0.999982542092847 9.999994784656296, 0.9999821070783486 9.99999649494716, 0.9999818443824613 9.999998238993602, 0.9999817565350929 9.999999999999503, 0.9999818443822645 10.00000176100541, 0.9999821070779625 10.000003505051883, 0.9999825420922867 10.000005215342792, 0.9999831452358134 10.0000068754071, 0.9999839106999436 10.000008469257484, 0.9999848311128405 10.000009981544288, 0.9999858976104264 10.000011397703368, 0.9999870999217476 10.000012704096331, 0.9999884264678883 10.0000138881419, 0.9999898644734845 10.000014938437067, 0.9999914000897551 10.000015844866912, 0.9999930185278744 10.000016598702022, 0.9999947042013972 10.000017192682547, 0.9999964408763636 10.000017621088137, 0.9999982118276417 10.000017879793004, 1 10.000017966305682))"`;

exports[`DCircle findPolygonInsideOnSphere 1 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      Array [
        0,
        0.0628820698883665,
      ],
      Array [
        0.006163523119350049,
        0.06257927541374028,
      ],
      Array [
        0.012267688001591696,
        0.061673808076570726,
      ],
      Array [
        0.01825370807395759,
        0.060174388052581226,
      ],
      Array [
        0.024063934585882962,
        0.058095455623841705,
      ],
      Array [
        0.029642411807028073,
        0.05545703210686164,
      ],
      Array [
        0.03493541591782261,
        0.052284527031134564,
      ],
      Array [
        0.03989197240218116,
        0.04860849342556107,
      ],
      Array [
        0.04446434695935995,
        0.04446433356998517,
      ],
      Array [
        0.0486085052072567,
        0.039891958046142637,
      ],
      Array [
        0.05228453675031367,
        0.03493540137204148,
      ],
      Array [
        0.055457039528643975,
        0.02964239792184763,
      ],
      Array [
        0.058095460747733065,
        0.024063922215712328,
      ],
      Array [
        0.0601743911063653,
        0.01825369800697819,
      ],
      Array [
        0.061673809490249136,
        0.01226768089454847,
      ],
      Array [
        0.06257927577582732,
        0.006163519443017494,
      ],
      Array [
        0.0628820698883665,
        -2.4074827616793682e-17,
      ],
      Array [
        0.06257927577582731,
        -0.006163519443017541,
      ],
      Array [
        0.06167380949024912,
        -0.012267680894548516,
      ],
      Array [
        0.060174391106365285,
        -0.01825369800697824,
      ],
      Array [
        0.05809546074773305,
        -0.024063922215712366,
      ],
      Array [
        0.055457039528643955,
        -0.029642397921847665,
      ],
      Array [
        0.052284536750313644,
        -0.03493540137204152,
      ],
      Array [
        0.048608505207256666,
        -0.03989195804614269,
      ],
      Array [
        0.0444643469593599,
        -0.04446433356998522,
      ],
      Array [
        0.0398919724021811,
        -0.04860849342556111,
      ],
      Array [
        0.03493541591782254,
        -0.05228452703113461,
      ],
      Array [
        0.029642411807027987,
        -0.05545703210686168,
      ],
      Array [
        0.02406393458588286,
        -0.05809545562384175,
      ],
      Array [
        0.018253708073957483,
        -0.06017438805258127,
      ],
      Array [
        0.012267688001591582,
        -0.06167380807657075,
      ],
      Array [
        0.006163523119349924,
        -0.06257927541374028,
      ],
      Array [
        -1.3192546405932253e-16,
        -0.0628820698883665,
      ],
      Array [
        -0.006163523119350187,
        -0.06257927541374027,
      ],
      Array [
        -0.012267688001591838,
        -0.061673808076570705,
      ],
      Array [
        -0.018253708073957736,
        -0.06017438805258119,
      ],
      Array [
        -0.024063934585883108,
        -0.05809545562384164,
      ],
      Array [
        -0.029642411807028222,
        -0.055457032106861565,
      ],
      Array [
        -0.03493541591782275,
        -0.05228452703113447,
      ],
      Array [
        -0.03989197240218131,
        -0.04860849342556094,
      ],
      Array [
        -0.04446434695936008,
        -0.04446433356998504,
      ],
      Array [
        -0.04860850520725683,
        -0.03989195804614249,
      ],
      Array [
        -0.052284536750313776,
        -0.03493540137204133,
      ],
      Array [
        -0.055457039528644045,
        -0.029642397921847485,
      ],
      Array [
        -0.05809546074773311,
        -0.024063922215712203,
      ],
      Array [
        -0.06017439110636533,
        -0.01825369800697809,
      ],
      Array [
        -0.061673809490249164,
        -0.012267680894548393,
      ],
      Array [
        -0.06257927577582734,
        -0.006163519443017446,
      ],
      Array [
        -0.0628820698883665,
        4.429923972593381e-17,
      ],
      Array [
        -0.06257927577582731,
        0.006163519443017533,
      ],
      Array [
        -0.061673809490249136,
        0.01226768089454848,
      ],
      Array [
        -0.0601743911063653,
        0.018253698006978174,
      ],
      Array [
        -0.058095460747733085,
        0.024063922215712283,
      ],
      Array [
        -0.05545703952864401,
        0.029642397921847568,
      ],
      Array [
        -0.05228453675031372,
        0.0349354013720414,
      ],
      Array [
        -0.04860850520725678,
        0.03989195804614256,
      ],
      Array [
        -0.04446434695936004,
        0.04446433356998508,
      ],
      Array [
        -0.03989197240218127,
        0.04860849342556097,
      ],
      Array [
        -0.034935415917822746,
        0.052284527031134474,
      ],
      Array [
        -0.02964241180702824,
        0.05545703210686155,
      ],
      Array [
        -0.024063934585883153,
        0.05809545562384163,
      ],
      Array [
        -0.018253708073957813,
        0.060174388052581164,
      ],
      Array [
        -0.012267688001591944,
        0.06167380807657068,
      ],
      Array [
        -0.006163523119350321,
        0.06257927541374025,
      ],
      Array [
        -1.540167130630379e-17,
        0.0628820698883665,
      ],
    ],
    "type": "LineString",
  },
  "properties": Object {},
  "type": "Feature",
}
`;

exports[`DCircle findPolygonInsideOnSphere 2 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      Array [
        Array [
          45,
          45.06288206988835,
        ],
        Array [
          45.00872606869534,
          45.06257894353454,
        ],
        Array [
          45.01736782541075,
          45.06167249333455,
        ],
        Array [
          45.025841780758846,
          45.06017147729583,
        ],
        Array [
          45.03406608220303,
          45.05809039713026,
        ],
        Array [
          45.0419613117435,
          45.055449356813796,
        ],
        Array [
          45.04945125898458,
          45.05227386657849,
        ],
        Array [
          45.05646366181996,
          45.048594594317734,
        ],
        Array [
          45.06293090734265,
          45.04444706691203,
        ],
        Array [
          45.06879068603822,
          45.03987132448065,
        ],
        Array [
          45.07398659284551,
          45.03491153102864,
        ],
        Array [
          45.07846866926072,
          45.02961554538361,
        ],
        Array [
          45.08219388131031,
          45.02403445669886,
        ],
        Array [
          45.08512652891437,
          45.01822208913455,
        ],
        Array [
          45.08723858289764,
          45.01223448061416,
        ],
        Array [
          45.08850994666772,
          45.00612934078662,
        ],
        Array [
          45.08892864036126,
          44.999965493504405,
        ],
        Array [
          45.08849090604856,
          44.99380230925324,
        ],
        Array [
          45.08720123337581,
          44.987699133039136,
        ],
        Array [
          45.08507230580394,
          44.98171471325452,
        ],
        Array [
          45.08212486836574,
          44.97590663700774,
        ],
        Array [
          45.078387518600735,
          44.97033077731026,
        ],
        Array [
          45.07389642303519,
          44.9650407573761,
        ],
        Array [
          45.06869496224571,
          44.960087437100434,
        ],
        Array [
          45.06283330817577,
          44.95551842655081,
        ],
        Array [
          45.05636793795997,
          44.95137763103001,
        ],
        Array [
          45.049361089049576,
          44.9477048319546,
        ],
        Array [
          45.0418801609206,
          44.944535307443665,
        ],
        Array [
          45.033997069082126,
          44.94189949613038,
        ],
        Array [
          45.02578755748551,
          44.93982270729824,
        ],
        Array [
          45.017330475764226,
          44.93832488000877,
        ],
        Array [
          45.0087070280087,
          44.93742039343123,
        ],
        Array [
          45,
          44.93711793011163,
        ],
        Array [
          44.9912929719913,
          44.93742039343123,
        ],
        Array [
          44.982669524235774,
          44.93832488000877,
        ],
        Array [
          44.97421244251449,
          44.93982270729824,
        ],
        Array [
          44.966002930917874,
          44.94189949613038,
        ],
        Array [
          44.9581198390794,
          44.944535307443665,
        ],
        Array [
          44.950638910950424,
          44.9477048319546,
        ],
        Array [
          44.94363206204003,
          44.95137763103001,
        ],
        Array [
          44.93716669182423,
          44.95551842655081,
        ],
        Array [
          44.93130503775429,
          44.960087437100434,
        ],
        Array [
          44.92610357696481,
          44.9650407573761,
        ],
        Array [
          44.921612481399265,
          44.97033077731026,
        ],
        Array [
          44.91787513163426,
          44.97590663700774,
        ],
        Array [
          44.91492769419606,
          44.98171471325452,
        ],
        Array [
          44.91279876662419,
          44.987699133039136,
        ],
        Array [
          44.91150909395144,
          44.99380230925324,
        ],
        Array [
          44.91107135963874,
          44.999965493504405,
        ],
        Array [
          44.91149005333228,
          45.00612934078662,
        ],
        Array [
          44.91276141710236,
          45.01223448061416,
        ],
        Array [
          44.91487347108563,
          45.01822208913455,
        ],
        Array [
          44.91780611868969,
          45.02403445669886,
        ],
        Array [
          44.92153133073928,
          45.02961554538361,
        ],
        Array [
          44.92601340715449,
          45.03491153102864,
        ],
        Array [
          44.93120931396178,
          45.03987132448065,
        ],
        Array [
          44.93706909265735,
          45.04444706691203,
        ],
        Array [
          44.94353633818004,
          45.048594594317734,
        ],
        Array [
          44.95054874101541,
          45.05227386657849,
        ],
        Array [
          44.9580386882565,
          45.055449356813796,
        ],
        Array [
          44.96593391779697,
          45.05809039713026,
        ],
        Array [
          44.97415821924115,
          45.06017147729583,
        ],
        Array [
          44.98263217458925,
          45.06167249333455,
        ],
        Array [
          44.99127393130466,
          45.06257894353454,
        ],
        Array [
          45,
          45.06288206988835,
        ],
      ],
    ],
    "type": "Polygon",
  },
  "properties": Object {},
  "type": "Feature",
}
`;

exports[`DCircle findPolygonInsideOnSphere 3 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      Array [
        45,
        45.06288206988835,
      ],
      Array [
        45.00872606869534,
        45.06257894353454,
      ],
      Array [
        45.01736782541075,
        45.06167249333455,
      ],
      Array [
        45.025841780758846,
        45.06017147729583,
      ],
      Array [
        45.03406608220303,
        45.05809039713026,
      ],
      Array [
        45.0419613117435,
        45.055449356813796,
      ],
      Array [
        45.04945125898458,
        45.05227386657849,
      ],
      Array [
        45.05646366181996,
        45.048594594317734,
      ],
      Array [
        45.06293090734265,
        45.04444706691203,
      ],
      Array [
        45.06879068603822,
        45.03987132448065,
      ],
      Array [
        45.07398659284551,
        45.03491153102864,
      ],
      Array [
        45.07846866926072,
        45.02961554538361,
      ],
      Array [
        45.08219388131031,
        45.02403445669886,
      ],
      Array [
        45.08512652891437,
        45.01822208913455,
      ],
      Array [
        45.08723858289764,
        45.01223448061416,
      ],
      Array [
        45.08892864036126,
        44.999965493504405,
      ],
    ],
    "type": "LineString",
  },
  "properties": Object {},
  "type": "Feature",
}
`;
